Closed
Bug 416225
Opened 18 years ago
Closed 17 years ago
Change "Unfiled bookmarks" to "Unsorted Bookmarks"
Categories
(Firefox :: Bookmarks & History, defect, P3)
Firefox
Bookmarks & History
Tracking
()
VERIFIED
FIXED
Firefox 3 beta5
People
(Reporter: peterhewitt, Assigned: u88484)
References
Details
(Keywords: late-l10n, polish)
Attachments
(1 file)
2.30 KB,
patch
|
asaf
:
review+
beltzner
:
approval1.9+
|
Details | Diff | Splinter Review |
User-Agent: Mozilla/5.0 (Windows; U; Windows NT 6.0; en-US; rv:1.9b4pre) Gecko/2008020604 Minefield/3.0b4pre
Build Identifier: Mozilla/5.0 (Windows; U; Windows NT 6.0; en-US; rv:1.9b4pre) Gecko/2008020604 Minefield/3.0b4pre
When adding a new bookmark there are three options by default
Bookmarks Toolbar
Bookmarks Menu
Unfiled bookmarks.
The choice of "unfiled" as a label is bad in two ways. Firstly, I (as well as others I have talked to) read it as "unified bookmarks" - as in, appears in both toolbar and menu.
Secondly what happens to these bookmarks that are "unfiled"? It's not a very clear term and doesn't really suggest to the layman unused to places how to search and tag bookmarks.
I suggest "unfiled" be changed to "starred pages" or something along those lines as this would show the lack of relationship to the two traditional entry points (toolbar and menu) and also would provide an analogy with both the UI itself and gmail.
Reproducible: Always
Steps to Reproduce:
1. Add bookmark
Actual Results:
Unfiled is easily misread as unified and is unclear on what is does
Expected Results:
Should provide an option of "starred" pages which would be more clear.
Comment 1•18 years ago
|
||
This came up for me today when I "starred" a page and then looked for it in the bookmarks pulldown and it was not there.
The average user might be very confused as to where their bookmarks are going when they can't find them in the pulldown by default.
I would suggest a "Starred Pages" folder be added to the bookmarks pulldown right above or below the automatically added Mozilla folder or that a starred page be added to the pulldown.
Comment 2•18 years ago
|
||
We previously had them going to an "All bookmarks" location. but it was hidden. Unfiled means you as a user haven't specified a location for them. It's just a bucket to quickly put single click star bookmarks into. "Starred" isn't any better, in my opinion, because users will have plenty of specifically filed bookmarks that aren't unfiled.
Comment 3•18 years ago
|
||
I am concerned that users will feel confused when the bookmark that was just created is not in the pulldown - how will they know to go the extra step of "Show all bookmarks" and then another step of looking in "Unfiled Bookmarks". It's like some sort of punishment for not having folders for your bookmarks and knowing to put them in such folders.
What if there were some default bookmark categories (read: folders) like "Personal", "Work", "Interesting Finds", something along those lines (like the default Music, Pictures, Documents folders on a computer) so that the user can see how the use of folders and bookmarks works?
It just seems really important that a user should get to star a page and then find it quickly in the pulldown later.
Comment 4•18 years ago
|
||
some related comments in the build forum:
http://forums.mozillazine.org/viewtopic.php?t=625576&start=30&sid=22a407b98e983ef1057d1cc4f8fd74bb
Comment 5•18 years ago
|
||
We've debated the various sides of this topic at length over about half a year now. The quick summary is that we believe overwhelming the user's menu with bookmarks will ultimately reduce the number of times they click the star, and with today's Web there are potentially thousands of pages that the user might want Firefox to remember. We want to establish a shift from bookmarks being only about "this is a site I plan to visit a lot by navigating to it in a menu" to also include the behavior "this is interesting, I might want to come back here later by searching for it."
Not knowing where the bookmarks are ending up is a usability problem, but we are trying to combat it with the "Show All Bookmarks" menu item.
Status: UNCONFIRMED → RESOLVED
Closed: 18 years ago
Resolution: --- → WONTFIX
Comment 6•18 years ago
|
||
Sorry, reopening to cover any possible string changes. The name isn't currently the best, but I do want to emphasize that stars == bookmarks.
Status: RESOLVED → UNCONFIRMED
Resolution: WONTFIX → ---
Comment 7•18 years ago
|
||
I should also note that unfiled is not even technically a word.
Comment 8•18 years ago
|
||
Thanks for pointing me in the right direction to be able to read up on how this all came to be, I can see how challenging and involved it is to try and shift the perception and function of this sort of activity.
Reporter | ||
Comment 9•18 years ago
|
||
is it not possible to "do a vista start menu" with the bookmarks menu?
(and this is my first attempt at drawing UI so do excuse me)
-----------------------------------------
| __________________________________ |
| | Search Bookmarks... | |
| __________________________________ |
|
| Bookmark this page Ctrl + D |
| Subscribe to this page |
| Bookmarks all tabs |
| Show all Bookmarks |
|---------------------------------------
| BBC News
| Gmail
etc
I mean we have the backend in place with the places database. I can now see that bookmarks have been completely redone but I've been using the nightlies for ages and have nly just began to understand how they're working.
The current UI simply does not reveal enough about how the system works, if you want people to search for bookmarks the bookmark search just has to be there in front of them to show it can be done, not hidden away under "the button that's for sorting the order of the menu"
I'm not sure how the front end UI works so I don't know if this is possible but surely xul allows flexibility like this?
Comment 10•18 years ago
|
||
In bug 396816 we are going to add the self describing text "Search Bookmarks and History" to the location bar in place of the URL of the user's home page (most poeple think this page is served locally anyway). As you perform searches in the location bar, stars on the far right of results indicate that pages are bookmarked, and they line up vertically with the control to bookmark a page.
Comment 11•18 years ago
|
||
Karl in Bug 418289 is suggesting the name "Unsorted Bookmarks".
Comment 13•18 years ago
|
||
I really do agree that Unsorted Bookmarks is the way to go.
It seems as if this bug has a lot of discussion about totally different things... it's pretty hard to follow along with the discussion.
In any case. Karl at bug# 418289 had a really great idea.
What do you guys think?
Comment 14•18 years ago
|
||
Okay so I understand the discussion now and I agree with the idea that the user would be confused that their bookmarks are moved to Unsorted.
Going with comment# 7 who said that Unfiled is not even a work. And you are absolutely right.
If you notice the really funny thing is Firefox uses the word for that folder but yet when you type 'unfiled' it marks it wrong with the closest suggestion being 'UnFilled' (Un Filled).
In any case unfiled makes me think of a Filing Cabinet and I usally don't think of my bookmarks as a filing cabinet.
-Mike
Comment 15•18 years ago
|
||
Strictly speaking unsorted also isn't a word (like unfiled you have to expand your search to an unabridged dictionary before getting a definition). Although as you point out at least spell check picks it up, I'm not sure where our spell check engine draws the line at what it considers words.
I'm in favor of switching to "unsorted bookmarks", the word unsorted sounds cleaner, both conceptually and literally (an alternate definition of unfiled is actually "not defiled"). The slight connotation of disorganization or clutter isn't perfect, but it's not nearly as strong as other ideas like "unorganized bookmarks."
Thanks for the suggestion Karl :)
Comment 16•18 years ago
|
||
Hmm. You know how incredibly confusing our various "Sort" commands for bookmarks have been over the years, to the point where I would never use any of them because I don't know what will happen where, and where and how long it will last?
Having a folder of "not put in a folder" bookmarks which says instead that it's unsorted, (exactly like all the rest of my bookmarks, which are unsorted) isn't going to help that. It's going to make me think that if I select the bookmarks root and then choose Sort - By Name that everything else will be sorted by name, but they will remain unsorted (and will also make me wonder if the "Unsorted" in that menu will put everything in the Unsorted folder).
Comment 17•18 years ago
|
||
I agree with Phil. Unsorted is equally as bad, if not more confusing than Unfiled.
How about unmanaged, unorganized, unarranged or unindexed?
Comment 18•18 years ago
|
||
But why go into a folder in the first place? Especially an "un" folder.
If there was a "General" folder for a default but we would be providing a positive foldering (i know that's not a real word) experience instead of a strangely judgmental "unfiled" or "un" anything that suggests the user is not done doing their filing. People who know how to create folders and use them to the fullest will do so and people who don't know will just get used to a General folder.
Reporter | ||
Comment 19•18 years ago
|
||
I agree with the above posters. The idea of the "folder of unsorted" suggests you should be able to see the folder in the primary UI like on the toolbar or the menu.
That's why I suggested "starred pages" as it would dispose of this "folder" mentality.
Perhaps even if we ditched the folder image completely and had a "display in menu / toolbar" tick box on the double click dialog?
Comment 20•18 years ago
|
||
We previously had bookmarks created from the star going to an "All bookmarks" location. However, it was hidden. That had users freaking out "Where are my bookmarks... data loss, data loss!" Thus the "unfiled" folder came into being to appease those that don't understand that using the star to bookmark a page wasn't, by initial design, meant to do the exact same thing as Bookmarks > Bookmark This Page.
Comment 21•17 years ago
|
||
Okay how about, do something like Virtual Bookmarks, like in Windows there is Virtual Folders (I.E. Virtual Folders are basically saved searches that reflect real folders but act as real folders so it's like a virtual sync.
We can do the same here, create a shadow so to speak or virtual folder of the Unsorted Bookmarks folder in the Bookmarks menu so that it is really out of the way by Virtual Folders in the manager are less of a hassle. The user can delete the folder if they don't care but the real folder will stay in tact.
My Idea might not be fully complete, but it's worth suggesting.
What do you think?
-Mike
Comment 22•17 years ago
|
||
I don't think that name is going to work. "Unfiled Bookmarks" is likely to be what Firefox 3 ships with for a name here.
Comment 23•17 years ago
|
||
beltzenr on irc:
faaborg: I don't think it's just a semantic change
I think we'd want localizers to change it, too
from "unfiled" to "unsorted" in their equivalent metaphors
Status: UNCONFIRMED → NEW
Ever confirmed: true
Flags: blocking-firefox3?
Summary: "Unfiled bookmarks" is unclear and confusing → Change "Unfiled bookmarks" to "Unsorted Bookmarks"
Updated•17 years ago
|
Assignee | ||
Comment 24•17 years ago
|
||
Changes 'Unfiled' to 'Unsorted'
Severity: normal → trivial
OS: Windows Vista → All
Hardware: PC → All
Version: unspecified → Trunk
Comment 25•17 years ago
|
||
02:49 <@Mano> beltzner: we're still taking string changes?
Not for beta4, but for RC1 we'll be taking limited changes, yes.
Comment 26•17 years ago
|
||
Comment on attachment 305954 [details] [diff] [review]
Patch
r=mano.
Beltzner: should we update the folder name for beta 1-4 users?
Attachment #305954 -
Flags: review?(mano) → review+
Assignee | ||
Comment 27•17 years ago
|
||
Comment on attachment 305954 [details] [diff] [review]
Patch
Seeking approval for Beta4
Attachment #305954 -
Flags: approval1.9b4?
Comment 28•17 years ago
|
||
I don't want to get in a debate about meaning, context etc..
But please make some change where the word is at least clear, unfilled is easy for most people to mistake with unified, dyslexics like me will likely never pick up it says unfilled. I didn't know until I read this bug...
Assignee | ||
Comment 29•17 years ago
|
||
(In reply to comment #28)
> I don't want to get in a debate about meaning, context etc..
>
> But please make some change where the word is at least clear, unfilled is easy
> for most people to mistake with unified, dyslexics like me will likely never
> pick up it says unfilled. I didn't know until I read this bug...
>
Already a reviewed patch here that will change it to 'Unsorted'. The patch is just awaiting approval for after beta 4.
Assignee | ||
Comment 30•17 years ago
|
||
Comment on attachment 305954 [details] [diff] [review]
Patch
Meant to ask for approval for RC1...or whatever will be after beta4.
Attachment #305954 -
Flags: approval1.9b4? → approval1.9?
Comment 31•17 years ago
|
||
(In reply to comment #26)
> (From update of attachment 305954 [details] [diff] [review])
> r=mano.
>
> Beltzner: should we update the folder name for beta 1-4 users?
Probably, but I wouldn't block on that, no.
Comment 32•17 years ago
|
||
Comment on attachment 305954 [details] [diff] [review]
Patch
a1.9=beltzner
Attachment #305954 -
Flags: approval1.9? → approval1.9+
Updated•17 years ago
|
Keywords: checkin-needed
Assignee | ||
Comment 33•17 years ago
|
||
This needs to checkin today if its going to make Firefox 3. Sorry to spam the bug...just don't want this missing the boat.
Comment 34•17 years ago
|
||
patch doesn't apply cleanly.
Comment 35•17 years ago
|
||
Checking in toolkit/components/places/src/nsNavBookmarks.cpp;
/cvsroot/mozilla/toolkit/components/places/src/nsNavBookmarks.cpp,v <-- nsNavBookmarks.cpp
new revision: 1.155; previous revision: 1.154
done
Checking in toolkit/locales/en-US/chrome/places/places.properties;
/cvsroot/mozilla/toolkit/locales/en-US/chrome/places/places.properties,v <-- places.properties
new revision: 1.5; previous revision: 1.4
done
Status: ASSIGNED → RESOLVED
Closed: 18 years ago → 17 years ago
Keywords: checkin-needed
Resolution: --- → FIXED
Target Milestone: Firefox 3 → Firefox 3 beta5
Comment 36•17 years ago
|
||
Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.9b5pre) Gecko/2008030806 Minefield/3.0b5pre ID:2008030806
with old profile, "Unfiled Bookmarks". not changed.
with new profile, "Unsorted Bookmarks"
Comment 37•17 years ago
|
||
(In reply to comment #36)
> Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.9b5pre) Gecko/2008030806
> Minefield/3.0b5pre ID:2008030806
>
> with old profile, "Unfiled Bookmarks". not changed.
>
> with new profile, "Unsorted Bookmarks"
See comment 31
Comment 38•17 years ago
|
||
(In reply to comment #37)
> (In reply to comment #36)
> > Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.9b5pre) Gecko/2008030806
> > Minefield/3.0b5pre ID:2008030806
> >
> > with old profile, "Unfiled Bookmarks". not changed.
> >
> > with new profile, "Unsorted Bookmarks"
> See comment 31
>
OK, this is an intended behavior ?
Comment 39•17 years ago
|
||
(In reply to comment #38)
> OK, this is an intended behavior ?
Not necessarily - you could file a new bug on it, but we won't block for it.
Comment 40•17 years ago
|
||
(In reply to comment #39)
> > OK, this is an intended behavior ?
> Not necessarily - you could file a new bug on it, but we won't block for it.
I already filed this one as bug 421974.
Verified the change for a fresh profile or when removing the places.sqlite with
Mozilla/5.0 (Windows; U; Windows NT 6.0; en-US; rv:1.9b5pre) Gecko/2008031004 Minefield/3.0b5pre ID:2008031004
Mozilla/5.0 (Macintosh; U; Intel Mac OS X 10.5; en-US; rv:1.9b5pre) Gecko/2008031004 Minefield/3.0b5pre ID:2008031004
Status: RESOLVED → VERIFIED
Comment 41•17 years ago
|
||
Marco, on another bug you told that the only thing beta users will run into is the "Smart Bookmarks" folder, which they have to remove manually. But this bug is also present for beta users. With the latest nightly build I'm still seeing the "Unfiled Bookmarks" folder. Do you think that there is a way to fix it?
Comment 42•17 years ago
|
||
(In reply to comment #41)
> Marco, on another bug you told that the only thing beta users will run into is
> the "Smart Bookmarks" folder, which they have to remove manually. But this bug
> is also present for beta users. With the latest nightly build I'm still seeing
> the "Unfiled Bookmarks" folder. Do you think that there is a way to fix it?
you're right, i forgot about this. Since the title of the root is setup at its creation we cannot change it now. It *could* be fixed changing the title for the item in the db, but probably not at this stage.
Comment 43•17 years ago
|
||
well however that is bug 421974 that is blocking- so i highly doubt for a fix
Comment 44•17 years ago
|
||
(In reply to comment #43)
> well however that is bug 421974 that is blocking- so i highly doubt for a fix
Ah I forgot that one. Thanks for pointing that out.
Comment 45•16 years ago
|
||
Bug 451915 - move Firefox/Places bugs to Firefox/Bookmarks and History. Remove all bugspam from this move by filtering for the string "places-to-b-and-h".
In Thunderbird 3.0b, you do that as follows:
Tools | Message Filters
Make sure the correct account is selected. Click "New"
Conditions: Body contains places-to-b-and-h
Change the action to "Delete Message".
Select "Manually Run" from the dropdown at the top.
Click OK.
Select the filter in the list, make sure "Inbox" is selected at the bottom, and click "Run Now". This should delete all the bugspam. You can then delete the filter.
Gerv
Component: Places → Bookmarks & History
QA Contact: places → bookmarks
You need to log in
before you can comment on or make changes to this bug.
Description
•