Bug 416225 - "Change "Unfiled bookmarks" to "Unsorted Bookmarks"" [p=supernova_00@yahoo.com (Kurt [supernova_00]) r=Mano a1.9=beltzner a=blocking-firefox3+]